bigger font on inputs to avoid zoom on mobile

--- a/app/assets/stylesheets/ics.css
+++ b/app/assets/stylesheets/ics.css
@@ -1,3 +1,7 @@
+input {
+  font-size: 16px !important;
+}
+
 select#school_select {
   margin-top: 15px;
 }
